# expenses-app-fastapi

./: .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.railway  Makefile  README.md  docker-compose.dev.yml  docker-compose.migrate.yml  docker-compose.yml  pyproject.toml  railway.toml
expenses_app/: __init__.py  app.py  db_connect.py  settings.py
expenses_app/bots/: __init__.py  telegram.py
expenses_app/controllers/: expenses.py  webhooks.py
expenses_app/controllers/tests/: test_expenses.py
expenses_app/db/: __init__.py  connect.py  crud.py
expenses_app/db/tests/: test_crud.py
expenses_app/handlers/: __init__.py  messages.py
expenses_app/models/: expenses.py  models.py
expenses_app/routes/: __init__.py  expenses.py  webhooks.py
expenses_app/tasks/: webhook.py
expenses_app/tests/utils/: fixtures.py
expenses_app/utils/: mapper.py  patching.py
expenses_app/views/: admin.py
migrations/: env.py
migrations/versions/: 34d1850635eb_migration.py  36a7e36e07df_migration.py  36d483b87060_migration.py  7a9133b052b1_migration.py
